[package]
name = "zkNFT"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

zcash_proofs = { path = "/root/zcash_proofs-0.9.0"}

bellman = { path = "/root/bellman"}

[dependencies.bls12_381]
version = "0.7"
[dependencies.jubjub]
version = "0.9"

[dependencies.rand_xorshift]
version = "0.3"

[dependencies.ff]
version = "0.12"

[dependencies.rand_core]
version = "0.6"